err/pg-proboscis.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jwp_python_command-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/jwp_terminfo-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/name'...
Listing './lib/python3.5/site-packages/name/jwp'...
Listing './lib/python3.5/site-packages/name/jwp/python'...
Listing './lib/python3.5/site-packages/name/jwp/python/command'...
Compiling './lib/python3.5/site-packages/name/jwp/python/command/runtime.py'...
***   File "./lib/python3.5/site-packages/name/jwp/python/command/runtime.py", line 125
    exec co in self.locals
          ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/name/jwp/terminfo.py'...
***   File "./lib/python3.5/site-packages/name/jwp/terminfo.py", line 45
    def move_cursor_absolute((x,y)):
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pg_foundation-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pg_greentrunk-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pg_pqueue-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pg_proboscis-1.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pg_typical-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/postgresql'...
Listing './lib/python3.5/site-packages/postgresql/encodings'...
Compiling './lib/python3.5/site-packages/postgresql/encodings/pbytea.py'...
***   File "./lib/python3.5/site-packages/postgresql/encodings/pbytea.py", line 30
    raise ValueError, "incomplete backslash sequence"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/postgresql/interface'...
Listing './lib/python3.5/site-packages/postgresql/interface/proboscis'...
Compiling './lib/python3.5/site-packages/postgresql/interface/proboscis/test.py'...
***   File "./lib/python3.5/site-packages/postgresql/interface/proboscis/test.py", line 51
    raise e, v, tb
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/postgresql/interface/proboscis/tracenull.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (tracenull.py, line 578)
Listing './lib/python3.5/site-packages/postgresql/protocol'...
Listing './lib/python3.5/site-packages/postgresql/protocol/greentrunk'...
Compiling './lib/python3.5/site-packages/postgresql/protocol/greentrunk/python.py'...
***   File "./lib/python3.5/site-packages/postgresql/protocol/greentrunk/python.py", line 54
    exec codeob in self.locals
              ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/postgresql/protocol/greentrunk/test'...
Listing './lib/python3.5/site-packages/postgresql/protocol/pqueue'...
Compiling './lib/python3.5/site-packages/postgresql/protocol/pqueue/element3.py'...
***   File "./lib/python3.5/site-packages/postgresql/protocol/pqueue/element3.py", line 102
    def __new__(subtype, (type, data)):
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/postgresql/protocol/pqueue/version.py'...
***   File "./lib/python3.5/site-packages/postgresql/protocol/pqueue/version.py", line 19
    def __new__(subtype, (major, minor)):
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/postgresql/protocol/typical'...
Compiling './lib/python3.5/site-packages/postgresql/protocol/typical/pstruct.py'...
***   File "./lib/python3.5/site-packages/postgresql/protocol/typical/pstruct.py", line 66
    def mktime((seconds, ms)):
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/postgresql/strings.py'...
***   File "./lib/python3.5/site-packages/postgresql/strings.py", line 54
    quote_re = re.compile(ur"""(?xu)
	E'(?:''|\\.|[^'])*(?:'|$)          (?# Backslash escapes E'str')
|	'(?:''|\\.|[^'])*(?:'|$)           (?# Regular literals 'str')
|	"(?:""|[^"])*(?:"|$)               (?# Identifiers "str")
|	(\$(?:[^0-9$]\w*)?\$).*?(?:\1|$)   (?# Dollar quotes $$str$$)
""")
                                    
	                                                                
 	                                                              
 	                                                         
 	                                                             
  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/postgresql/test'...
Listing './lib/python3.5/site-packages/postgresql/utility'...
Listing './lib/python3.5/site-packages/postgresql/utility/client'...
Compiling './lib/python3.5/site-packages/postgresql/utility/client/iri.py'...
***   File "./lib/python3.5/site-packages/postgresql/utility/client/iri.py", line 238
    raise ValueError, 'unclosed command reference started at %d' %(
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/postgresql/utility/client/option.py'...
***   File "./lib/python3.5/site-packages/postgresql/utility/client/option.py", line 177
    raise OptionValueError, \
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/postgresql/utility/client/pgpass.py'...
***   File "./lib/python3.5/site-packages/postgresql/utility/client/pgpass.py", line 26
    def lookup_password(words, (user, host, port, database)):
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
